[package]
name = "Marionette"
version = "0.1.0"
edition = "2018"
resolver = "2"
publish = false

[lib]
name = "marionette"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.9"
lazy_static = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["v4"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = false
